# student_use_ai

./: README.md  classify.py  model_eval.py  pyproject.toml
logistic/: classify.py  create_model.py  test_subset.py
