[tool.poetry]
name = "ai-study"
version = "0.1.0"
description = ""
authors = ["Sean C. Rife <seanrife@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_study"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
datasets = "^4.8.4"
openpyxl = "^3.1.5"
triton = "^3.6.0"
binoculars = {git = "https://github.com/ahans30/Binoculars.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
